--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -156,6 +156,12 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2);
+    background-color: greenyellow;
+    float: left; }
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
 
 .header {
   /* child elements will position relative to .header */
