--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -11,4 +11,16 @@
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
   }
+
+  .col-1-of-2 {
+    // calc lets you mix units (can't do this in scss)
+    // #{} to use sass variables
+    width: calc((100% - #{$gutter-horizontal}) / 2);
+    background-color: greenyellow;
+    float: left; 
+
+    &:not(:last-child) {
+      margin-right: $gutter-horizontal;
+    }
+  }
 }
