Select classes using carrot notation

--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -15,15 +15,24 @@
   // without this, the row parent element collapses its height to 0 bc all its child elements are floated
   @include clearfix;
 
+  // select all elements with classes that start with "col-"
+  [class^="col-"] {
+    &:not(:last-child) {
+      margin-right: $gutter-horizontal;
+    }
+  }
+
   .col-1-of-2 {
     // calc lets you mix units (can't do this in scss)
     // #{} to use sass variables
     width: calc((100% - #{$gutter-horizontal}) / 2);
     background-color: greenyellow;
     float: left;
+  }
 
-    &:not(:last-child) {
-      margin-right: $gutter-horizontal;
-    }
+  .col-1-of-3 {
+    width: calc((100% - (2 * #{$gutter-horizontal})) / 3);
+    background-color: greenyellow;
+    float: left;
   }
 }
