--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -55,13 +55,19 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
+  letter-spacing: 0.2rem;
   background-image: linear-gradient(
     to right,
     $color-primary-light,
     $color-primary-dark
   );
+  // setting the text transparent allows you to see the background image
+  color: transparent;
   // gradient will be show where there is text
   -webkit-background-clip: text;
-  // setting the text transparent allows you to see the background image 
-  color: transparent;
+  transition: all 0.2s;
+
+  &:hover {
+    transform: skewY(2deg);
+  }
 }
