--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -9,6 +9,9 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: rgb(0, 0, 0);
 
+// FONT SIZES
+$default-font-size: 1.6rem;
+
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
