--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -210,7 +210,8 @@ body {
     border-radius: 0.2rem;
     position: absolute;
     z-index: 10;
-    transition: all 0.2s; }
+    transition: all 0.2s;
+    outline-offset: 2rem; }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
@@ -221,6 +222,7 @@ body {
       left: 20%;
       top: 10rem; }
     .composition__photo:hover {
+      outline: 1.5rem solid #55c57a;
       transform: scale(1.05);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
