--- a/Natours/starter/sass/pages/_homepage.scss
+++ b/Natours/starter/sass/pages/_homepage.scss
@@ -5,3 +5,16 @@
   margin-top: -20vh;
 }
 
+.section-features {
+  padding: 20rem 0;
+  /* use background image to get background gradient */
+  /* order matters, right now the gradient is above the img */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url("../img/nat-4.jpg");
+  // background image covers the entire section
+  background-size: cover;
+}
