--- a/Natours/starter/sass/components/_feature-box.scss
+++ b/Natours/starter/sass/components/_feature-box.scss
@@ -5,9 +5,23 @@
   text-align: center;
   border-radius: 0.3rem;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+  transition: transform 0.3s;
+
   &__icon {
+    font-size: 6rem;
+    display: inline-block;
+    background-image: linear-gradient(
+      to right,
+      $color-primary-light,
+      $color-primary-dark
+    );
+    // setting the text transparent allows you to see the background image
+    color: transparent;
+    // gradient will be show where there is text
+    -webkit-background-clip: text;
   }
 
-  &__text {
+  &:hover {
+    transform: scale(1.03) translateY(-1.5rem);
   }
 }
