--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -313,11 +313,15 @@ body {
   margin-top: -20vh; }
 
 .section-features {
+  margin-top: -20vh;
   padding: 20rem 0;
   /* use background image to get background gradient */
   /* order matters, right now the gradient is above the img */
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
-  background-size: cover; }
+  background-size: cover;
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
 
 *,
 *::after,
