--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -1,4 +1,5 @@
 .card {
+  // FUNCTIONALITY
   perspective: 150rem; // has to be in the parent container
   -moz-perspective: 150rem; // for mozilla 5
   position: relative;
@@ -22,6 +23,7 @@
     backface-visibility: hidden;
     border-radius: 3px;
     box-shadow: $box-shadow-1;
+    overflow: hidden;
 
     &--front {
       background-color: $color-white;
@@ -41,10 +43,32 @@
   }
 
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
 
   &:hover &__side--back {
     transform: rotateY(0);
+  }
+
+  // FRONT SIDE
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+
+    &--1 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url(../img/nat-5.jpg);
+    }
+    &--2 {
+      background-image: url(../img/nat-6.jpg);
+    }
+    &--3 {
+      background-image: url(../img/nat-7.jpg);
+    }
   }
 }
