Add positioning styling to card details

--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -6,13 +6,11 @@
   // place cards on top of one another, but also takes the cards out of their nature flow, parent will collapse and lose height
   // fix this by giving the height to the parent
   // clearfix doesn't work when children have position absolute
-  height: 50rem;
+  height: 52rem;
 
   &__side {
     background-color: orangered;
-    color: white;
-    font-size: 2rem;
-    height: 50rem;
+    height: 52rem;
     transition: all 0.8s;
     // place cards on top of one another, but also takes the cards out of their nature flow, parent will collapse and lose height
     position: absolute;
@@ -71,6 +69,49 @@
     }
     &--3 {
       background-image: url(../img/nat-7.jpg);
+    }
+  }
+
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    text-align: right;
+    width: 75%;
+  }
+
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
+    }
+  }
+
+  &__details {
+    padding: 3rem;
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-grey-light-2;
+        }
+      }
     }
   }
 }
