--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -352,6 +352,24 @@ body {
     transform: scale(1.03) translateY(-1.5rem);
     cursor: pointer; }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6em rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 0.3rem;
+  padding: 6rem;
+  font-size: 1.6rem; }
+  .story__shape {
+    background-color: pink;
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-shape-outside: circle(50% a 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%); }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -432,6 +450,11 @@ body {
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
+  margin-top: -10rem; }
+
+.section-stories {
+  background-color: #f7f7f7;
+  padding: 15rem 0;
   margin-top: -10rem; }
 
 *,
