--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -359,16 +359,22 @@ body {
   background-color: #fff;
   border-radius: 0.3rem;
   padding: 6rem;
-  font-size: 1.6rem; }
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
   .story__shape {
-    background-color: pink;
     width: 15rem;
     height: 15rem;
     float: left;
     -webkit-shape-outside: circle(50% a 50% 50%);
     shape-outside: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%); }
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg); }
+  .story__img {
+    height: 100%; }
+  .story__text {
+    transform: skewX(12deg); }
 
 .row {
   max-width: 114rem;
