--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -9,7 +9,6 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
-  // amena afreen
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -21,6 +20,7 @@
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
+    position: relative;
   }
 
   &__img {
@@ -29,5 +29,23 @@
 
   &__text {
     transform: skewX(12deg);
+  }
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    color: $color-white;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; // fix the subtle shaking at the end of the transition
+  }
+
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
   }
 }
