--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -373,7 +373,10 @@ body {
     transform: translateX(-3rem) skewX(12deg);
     position: relative; }
   .story__img {
-    height: 100%; }
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all 0.5s; }
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
@@ -391,6 +394,8 @@ body {
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: translateX(-4rem) scale(1); }
 
 .row {
   max-width: 114rem;
