--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -213,6 +213,19 @@ body {
     box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.15);
     transform: translateY(0); }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.15; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
@@ -356,7 +369,7 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6em rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 0.3rem;
   padding: 6rem;
   padding-left: 9rem;
@@ -480,9 +493,9 @@ body {
   margin-top: -10rem; }
 
 .section-stories {
-  background-color: #f7f7f7;
   padding: 15rem 0;
-  margin-top: -10rem; }
+  margin-top: -10rem;
+  position: relative; }
 
 *,
 *::after,
