--- a/Natours/starter/sass/pages/_homepage.scss
+++ b/Natours/starter/sass/pages/_homepage.scss
@@ -35,7 +35,7 @@
 }
 
 .section-stories {
-  background-color: $color-grey-light-1;
   padding: 15rem 0;
   margin-top: -10rem;
+  position: relative;
 }
