--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -227,6 +227,12 @@ body {
     width: 100%;
     object-fit: cover; }
 
+.section-book {
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  width: 100%;
+  height: 100%;
+  padding: 6rem; }
+
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
