--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/button";
 @import "components/bg-video";
+@import "components/booking";
 @import "components/card";
 @import "components/composition";
 @import "components/feature-box";
