Create a border radius variable

--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -26,3 +26,6 @@ $gutter-horizontal: 6rem;
 
 // SHADOWS
 $box-shadow-1: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+// border-radius
+$border-radius-3: 0.3rem;
