--- a/Natours/starter/sass/pages/_homepage.scss
+++ b/Natours/starter/sass/pages/_homepage.scss
@@ -53,5 +53,5 @@
   background-image: url(../img/nat-10.jpg);
   background-size: cover;
   height: 50rem;
-  border-radius: 3px;
+  border-radius: $border-radius-3;
 }
