Add box shadow to form

--- a/Natours/starter/sass/pages/_homepage.scss
+++ b/Natours/starter/sass/pages/_homepage.scss
@@ -54,4 +54,5 @@
   background-size: cover;
   height: 50rem;
   border-radius: $border-radius-3;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 }
