--- a/Natours/starter/sass/pages/_homepage.scss
+++ b/Natours/starter/sass/pages/_homepage.scss
@@ -50,6 +50,7 @@
 }
 
 .book {
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
   background-image: linear-gradient(
       105deg,
       rgba($color-white, 0.9) 0%,
@@ -60,5 +61,9 @@
   background-size: cover;
   height: 50rem;
   border-radius: $border-radius-3;
-  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
