--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -366,6 +366,27 @@ body {
     transform: scale(1.03) translateY(-1.5rem);
     cursor: pointer; }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 0.2rem;
+  background-color: white;
+  border: none;
+  border-bottom: 0.3rem solid transparent;
+  width: 90%;
+  display: block; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 0.3rem solid #ff7730; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+
 .story {
   width: 75%;
   margin: 0 auto;
