--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -399,7 +399,8 @@ body {
 
 .form__input:placeholder-shown + .form__label {
   opacity: 0;
-  visibility: hidden; }
+  visibility: hidden;
+  transform: translateY(-4rem); }
 
 .story {
   width: 75%;
