--- a/Natours/starter/sass/components/_form.scss
+++ b/Natours/starter/sass/components/_form.scss
@@ -45,5 +45,6 @@
   &__input:placeholder-shown + &__label {
     opacity: 0; // visibility hidden is good enough but adding opacity allows us to animate
     visibility: hidden;
+    transform: translateY(-4rem);
   }
 }
