--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -420,7 +420,7 @@ body {
   border-radius: 50%;
   position: absolute;
   display: inline-block;
-  top: 0;
+  top: -0.4rem;
   left: 0; }
   .form__radio-button::after {
     height: 1.3rem;
@@ -432,7 +432,11 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #55c57a; }
+    background-color: #55c57a;
+    opacity: 0; }
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1; }
 
 .story {
   width: 75%;
