--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -2,7 +2,14 @@
   &::after {
     content: "";
     display: table;
-    // clears left and right floats  
+    // clears left and right floats
     clear: both;
   }
+}
+
+@mixin center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
