--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -51,6 +51,7 @@
   &__link {
     &:link,
     &:visited {
+      display: inline-block;
       padding: 1rem 2rem;
       color: $color-grey-light-1;
       text-decoration: none;
@@ -71,6 +72,7 @@
     &active {
       background-position: 100%;
       color: $color-primary;
+      transform: translateX(2rem);
     }
   }
 }
