--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -605,6 +605,9 @@ body {
   background-size: 220%;
   transition: all 0.4s;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%); }
+  .navigation__link:link span, .navigation__link:visited span {
+    margin-right: 1rem;
+    display: inline-block; }
 
 .navigation__link:hover, .navigation__linkactive {
   background-position: 100%;
