--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -655,13 +655,12 @@ body {
   background-color: transparent; }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
-  transform: rotate(45deg);
+  transform: rotate(135deg);
   top: 0; }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
-  transform: rotate(-45deg);
-  top: 0;
-  top: 0.1rem; }
+  transform: rotate(-135deg);
+  top: 0; }
 
 .footer {
   background-color: #333;
