Add media queries for root font-size

--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -8,26 +8,25 @@
 }
 
 html {
-  /* set a root font-size so that ALL rem values inherit relative to this */
-  /* bad practice to specify font size in pixels bc it overrides the browser's font size that the user can manually change in the settings */
-  /* 62.5% = 10px = 10 / browser's default font size (16px) */
-  /* 1rem = 10px */
-  font-size: 62.5%;
+  // set a root font-size so that ALL rem values inherit relative to this
+  // bad practice to specify font size in pixels bc it overrides the browser's font size that the user can manually change in the settings
+  // 62.5% = 10px = 10 / browser's default font size (16px)
 
-  @include respond(phone) {
-    font-size: 50%;
-  }
-  
-  @include respond(tab-port) {
-    font-size: 60%;
-  }
+  font-size: 62.5%; // 1rem = 10px
 
   @include respond(tab-land) {
-    font-size: 70%;
+    // <= 1200px
+    font-size: 56.25%; // 1rem = 9px, 9px / 16 = 56.25%
+  }
+
+  @include respond(tab-port) {
+    // <= 900px
+    font-size: 50%; // 1rem = 8px, 8px / 16 = 50%, this covers for phone screens so no need to create a media query for phone
   }
 
   @include respond(big-desktop) {
-    font-size: 80%;
+    // >= 1800px
+    font-size: 75%; // 1rem = 12px, 12px / 16 = 75%
   }
 }
 
